--- a/Lezione 3 Teoria/Makefile.win
+++ b/Lezione 3 Teoria/Makefile.win
@@ -1,15 +1,15 @@
-# Project: EsempioClasse
+# Project: Lezione 2 Teoria
 # Makefile created by Dev-C++ 5.11
 
-CPP      = g++.exe -std=c++11
-CC       = gcc.exe -std=c++11
+CPP      = g++.exe
+CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = main2.o a.o b.o
-LINKOBJ  = main2.o a.o b.o
+OBJ      = main.o complesso.o
+LINKOBJ  = main.o complesso.o
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
-BIN      = EsempioClasse.exe
+BIN      = "Lezione 2 Teoria.exe"
 CXXFLAGS = $(CXXINCS) 
 CFLAGS   = $(INCS) 
 RM       = rm.exe -f
@@ -24,11 +24,8 @@ clean: clean-custom
 $(BIN): $(OBJ)
 	$(CPP) $(LINKOBJ) -o $(BIN) $(LIBS)
 
-main2.o: main2.cpp
-	$(CPP) -c main2.cpp -o main2.o $(CXXFLAGS)
+main.o: main.cpp
+	$(CPP) -c main.cpp -o main.o $(CXXFLAGS)
 
-a.o: a.cpp
-	$(CPP) -c a.cpp -o a.o $(CXXFLAGS)
-
-b.o: b.cpp
-	$(CPP) -c b.cpp -o b.o $(CXXFLAGS)
+complesso.o: complesso.cpp
+	$(CPP) -c complesso.cpp -o complesso.o $(CXXFLAGS)
