--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,11 @@
         "unordered_set": "cpp",
         "vector": "cpp",
         "string_view": "cpp",
-        "initializer_list": "cpp"
+        "initializer_list": "cpp",
+        "new": "cpp",
+        "iosfwd": "cpp",
+        "stdexcept": "cpp",
+        "random": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "C_Cpp.dimInactiveRegions": false
